# Vendas-HTTP

./: client.py  pyproject.toml  server.py
