[tool.poetry]
name = "vendasonline"
version = "0.1.0"
description = "projetos de vendas online usando banco de dados e servidor web."
authors = ["BergJr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
